# bbg

./: CLAUDE.md  Cargo.toml  README.md
docs/explanation/: architecture-overview.md  data-availability.md  design-principles.md  foculus-vs-crdt.md  logup.md  mutator-set.md  nmt.md  polynomial-privacy.md  signal-sync.md  structural-sync.md  why-mutator-set.md  why-nmt.md  why-polynomial-state.md  why-signal-first.md
graph/: EdgeSet.md  LogUp.md  NMT.md  bbg.md  data structure for superintelligence.md  mutator set.md
graph/bbg/: storage.md
reference/: architecture.md  cross-index.md  data-availability.md  edge-store.md  indexes.md  privacy.md  query.md  signal-sync.md  state.md  storage.md  sync.md  temporal.md
reference/props/: README.md  algebraic-das.md  algebraic-nmt.md  mutator-set-polynomial.md  pi-weighted-replication.md  signal-first.md  storage-proofs.md  temporal-polynomial.md  unified-polynomial-state.md  valence.md  verifiable-query.md
roadmap/: README.md  algebraic-das.md  algebraic-nmt.md  full-pipeline.md  mutator-set-polynomial.md  storage-proofs.md  verifiable-query.md
specs/: architecture.md  cross-index.md  privacy.md  state.md  storage.md  sync.md
src/: lib.rs
