# ---
# tags: bbg, config
# crystal-type: source
# crystal-domain: cyber
# ---
[package]
name = "bbg"
version = "0.1.0"
edition = "2024"
description = "Big Badass Graph: authenticated state with polynomial commitments"
license = "Cyber"

[dependencies]
nebu = { path = "../nebu" }
hemera = { path = "../hemera" }
nox = { path = "../nox" }
zheng = { path = "../zheng" }
